--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,7 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# Dictionary files (generated from source)
+lib/dictionary/*.json
+lib/dictionary/de-en.txt
