--- a/.gitignore
+++ b/.gitignore
@@ -44,3 +44,5 @@ next-env.d.ts
 lib/dictionary/*.db
 lib/dictionary/*.db-wal
 lib/dictionary/*.db-shm
+lib/dictionary/.dict-hashes.json
+lib/dictionary/tu-chemnitz-*.txt
