--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "better-sqlite3": "^12.6.0",
     "clsx": "^2.1.1",
     "drizzle-orm": "^0.45.1",
+    "framer-motion": "^12.26.2",
     "jsdom": "^27.4.0",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
