--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "drizzle-orm": "^0.45.1",
     "framer-motion": "^12.26.2",
     "jsdom": "^27.4.0",
+    "linkedom": "^0.18.12",
     "lucide-react": "^0.562.0",
     "next": "16.1.1",
     "openai": "^6.15.0",
